<resources>
    <string name="app_name">KidsConnect</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_parent">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_features">Features</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">sean@gmail.com</string>
    <string name="firebase_password" translatable="false">111111</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="track_title">KidsConnect is running</string>
    <!--    <string name="track_text">Touch for more information or to stop the tracking service</string>-->
    <string name="track_text">Your parent is tracking your location</string>
    <string name="title_activity_child_account">ChildAccountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
