<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <include
        android:id="@+id/SignUpToolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:padding="22dp">

        <ImageButton
            android:id="@+id/SignUpBackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back">
        </ImageButton>

        <TextView
            android:id="@+id/CreateAccountText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Create Account"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/SignUpToolbar"

        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpUsernameLayout"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/CreateAccountText"
                android:layout_marginTop="10dp"
                android:hint="@string/username"
                app:boxStrokeColor="@color/mainColor"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpUsernameText"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpEmailLayout"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/mainColor"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpEmailText"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpPasswordLayout"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/mainColor"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpPasswordText"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpConfirmPasswordLayout"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/confirmPassword"
                app:boxStrokeColor="@color/mainColor"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpConfirmPasswordText"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpPhoneLayout"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SignUpConfirmPasswordLayout"
                android:layout_marginTop="10dp"
                android:hint="Phone Number"
                app:boxStrokeColor="@color/mainColor"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUpPhoneText"
                    style="@style/InputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUpButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout_password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:cornerRadius="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/LoginButton2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/gradient_border"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/mainColor"
                android:textSize="16sp"
                app:rippleColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
    <include
        android:id="@+id/progress_bar"
        layout="@layout/progressbar"/>

</RelativeLayout>